[feature ] 로깅 기능추가