@@ -9,6 +9,7 @@ import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
@@ -26,10 +27,10 @@ public class WebConfig implements WebMvcConfigurer {
     }
 
     @Bean
-    public FilterRegistrationBean getFilterRegistrationBean() {
-        FilterRegistrationBean registrationBean = new FilterRegistrationBean(new RequestLoggingFilter());
+    public FilterRegistrationBean<RequestLoggingFilter> getFilterRegistrationBean() {
+        FilterRegistrationBean<RequestLoggingFilter> registrationBean = new FilterRegistrationBean(new RequestLoggingFilter());
         registrationBean.setOrder(Integer.MIN_VALUE);
-        registrationBean.setUrlPatterns(Arrays.asList("/api/*"));
+        registrationBean.setUrlPatterns(List.of("/api/*"));
         return registrationBean;
     }
 
